[maven] IDEA-313767 refactoring: MavenImportingTestCaseKt.importMavenProjectsSync
GitOrigin-RevId: 4d3c720ed4d6bd40fbc1225b86ca9042fc732675