@@ -4,7 +4,7 @@ package org.jetbrains.idea.maven.indices;
 import com.intellij.ide.projectWizard.ProjectWizardTestCase;
 import com.intellij.ide.util.newProjectWizard.AbstractProjectWizard;
 import com.intellij.maven.testFramework.MavenTestCase;
-import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.maven.testFramework.utils.MavenImportingTestCaseKt;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.LocalFileSystem;
@@ -21,6 +21,7 @@ import org.jetbrains.idea.maven.wizards.MavenProjectImportProvider;
 
 import java.nio.file.Path;
 import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -75,10 +76,7 @@ public class MavenMultiProjectImportTest extends ProjectWizardTestCase<AbstractP
     manager.initForTests();
     manager.waitForImportCompletion();
     manager.resetManagedFilesAndProfilesInTests(Collections.singletonList(file), MavenExplicitProfiles.NONE);
-    ApplicationManager.getApplication().invokeAndWait(() -> {
-      manager.scheduleImportInTests(Collections.singletonList(file));
-      manager.importMavenProjectsSync();
-    });
+    MavenImportingTestCaseKt.importMavenProjectsSync(manager, List.of(file));
 
     Promise<?> promise = manager.waitForImportCompletion();
     PlatformTestUtil.waitForPromise(promise);
